add: version 2.0 portfolio

--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Portfolio de Francisco - proyectos de desarrollo web con React, JavaScript, y más.">
+  <meta name="keywords" content="portfolio, proyectos, React, desarrollo web, JavaScript, ecommerce, mini business">
+  <meta name="author" content="Francisco Toro Goitea">
   <link rel="stylesheet" href="./src/main.css">
-  <title>Francisco Toro</title>
+  <title>Portfolio de Francisco </title>
 </head>
 
 <body>
