--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <meta name="keywords" content="portfolio, proyectos, React, desarrollo web, JavaScript, ecommerce, mini business">
   <meta name="author" content="Francisco Toro Goitea">
   <link rel="stylesheet" href="./src/main.css">
-  <title>Portfolio de Francisco </title>
+  <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+  <title>Francisco Toro Portfolio </title>
 </head>
 
 <body>
