add: metas tag Open Graph index

--- a/index.html
+++ b/index.html
@@ -5,12 +5,26 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio de Francisco - proyectos de desarrollo web con React, JavaScript, y más.">
-  <meta name="keywords" content="portfolio, proyectos, React, desarrollo web, JavaScript, ecommerce, mini business">
+  <meta name="description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Full-Stack. Construyendo aplicaciones web con propósito.">
+  <meta name="keywords" content="Portfolio, Projects, React, Angular, Web Development">
   <meta name="author" content="Francisco Toro Goitea">
   <link rel="stylesheet" href="./src/main.css">
   <link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
   <title>Francisco Toro Portfolio </title>
+
+  <!-- Open Graph Meta Tags -->
+  <meta property="og:title" content="Francisco Toro - Full-Stack Developer Portfolio" />
+  <meta property="og:description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Full-Stack. Construyendo aplicaciones web con propósito." />
+  <meta property="og:image" content="https://portafolio-francisco-toro.vercel.app/public/perfil-img.jpg" />
+  <meta property="og:url" content="https://portafolio-francisco-toro.vercel.app/"/>
+  <meta property="og:type" content="website" />
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Francisco Toro - Full-Stack Developer Portfolio" />
+  <meta name="twitter:description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Full-Stack. Construyendo aplicaciones web con propósito." />
+  <meta name="twitter:image" content="https://portafolio-francisco-toro.vercel.app/public/perfil-img.jpg" />
+  
 </head>
 
 <body>
