--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Full-Stack. Construyendo aplicaciones web con propósito.">
+  <meta name="description" content="Discover my projects, skills, and experience as a Full-Stack Developer. Building purposeful web applications.">
   <meta name="keywords" content="Portfolio, Projects, React, Angular, Web Development">
   <meta name="author" content="Francisco Toro Goitea">
   <link rel="stylesheet" href="./src/main.css">
@@ -14,7 +14,7 @@
 
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Francisco Toro - Full-Stack Developer Portfolio" />
-  <meta property="og:description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Full-Stack. Construyendo aplicaciones web con propósito." />
+  <meta property="og:description" content="Discover my projects, skills, and experience as a Full-Stack Developer. Building purposeful web applications." />
   <meta property="og:image" content="https://portafolio-francisco-toro.vercel.app/public/perfil-img.jpg" />
   <meta property="og:url" content="https://portafolio-francisco-toro.vercel.app/"/>
   <meta property="og:type" content="website" />
@@ -22,7 +22,7 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Francisco Toro - Full-Stack Developer Portfolio" />
-  <meta name="twitter:description" content="Descubre mis proyectos, habilidades y experiencia como desarrollador Full-Stack. Construyendo aplicaciones web con propósito." />
+  <meta name="twitter:description" content="Discover my projects, skills, and experience as a Full-Stack Developer. Building purposeful web applications." />
   <meta name="twitter:image" content="https://portafolio-francisco-toro.vercel.app/public/perfil-img.jpg" />
   
 </head>
